add current location

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.2
   google_maps_flutter: ^2.5.0
   flutter_geocoder: ^0.2.2-nullsafety
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
