--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,6 @@ dependencies:
   geolocator: ^10.1.0
   dio: ^5.3.3
   flutter_polyline_points: ^2.0.0
-  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +81,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/maptheme/silver.json
+    - assets/maptheme/night_theme.json
+    - assets/maptheme/aubergine.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
