--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^10.1.0
   dio: ^5.3.3
   flutter_polyline_points: ^2.0.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
