--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^10.1.0
   flutter_polyline_points: ^2.0.0
   location: ^5.0.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
